added toggle nav and key insights page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header class="header">
         </header>
         <div id="side-bar-menu">
-            <nav class="side-bar-menu-inner">
+            <nav class="navigation">
                 <li><a href="#" class="tab active">Home</a></li>
                 <li><a href="./pages/about-me.html" class="tab">About Me</a></li>
                 <li><a href="./pages/key-insights.html" class="tab">Key Insights</a></li>
