--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     </head>
 
     <body class="home-page">
+        <div class="background-container">
+          <img class="bg-pic" src="./images/bluebg.jpg" alt="bg">
+        </div>
         <nav>
             <div class="navbar">
               <div class="nav-container">
@@ -45,6 +48,8 @@
                         <p class='description'>Business Administration</p>
                         <p class='description'>Pre-med</p>
                         <p class='description-two'>Columbia, SC</p>
+                        <hr id="hr-2"/>
+                        <p class='description-three'>As a public health major, I have significantly focused on making a difference to benefit my community.</p>
                       </div>
                       
                     </div>
