--- a/pages/leadership.html
+++ b/pages/leadership.html
@@ -9,6 +9,9 @@
     </head>
 
     <body class="home-page">
+      <div class="background-container">
+        <img class="bg-pic" src="../images/tealbg.jpg" alt="bg">
+      </div>
         <nav>
             <div class="navbar">
               <div class="nav-container">
@@ -62,23 +65,23 @@
                 Low Health Literacy is caused by the following factors:
               </p>
               <p>
-                1. Limited exposure: Most children rely on their guardian to make appointments,
+                <span>1.</span> Limited exposure: Most children rely on their guardian to make appointments,
                 complete forms and paperwork, and handle payment, because the guardian has
                 control over their health decisions.
               </p>
               <p>
-                2. Lack of education in schools and academic curricula: Health classes at school
+                <span>2.</span> Lack of education in schools and academic curricula: Health classes at school
                 focus on the importance of diet, physical activity, drug prevention, sex education,
                 and actions that can affect health practices, but do not include healthcare
                 navigation.
               </p>
               <p>
-                3. Social media and misinformation: younger individuals tend to be more active on
+                <span>3.</span> Social media and misinformation: younger individuals tend to be more active on
                 social media and turn to it for sources of information, which can often be
                 misleading.
               </p>
               <p>
-                4. Cultural and language barriers: Minorities and first-generation students (and their
+                <span>4.</span> Cultural and language barriers: Minorities and first-generation students (and their
                 parents) may find barriers in navigating healthcare due to differences in
                 understanding terminology and procedures in healthcare.
               </p>
@@ -98,27 +101,27 @@
                 The curriculum will include the following topics:
               </P>
               <p>
-                1. Healthcare system overview: an introduction to different healthcare providers,
+                <span>1.</span> Healthcare system overview: an introduction to different healthcare providers,
                 healthcare teams, and specialties (e.g. primary vs. urgent care and the difference
                 between physicians, medical assistants, nurses, or physician assistants)
               </p>
               <p>
-                2. Health insurance: Terminology (co-pay, in-network, deductible) and
+                <span>2.</span> Health insurance: Terminology (co-pay, in-network, deductible) and
                 understanding healthcare bills
               </p>
               <p>
-                3. Making and preparing doctor’s appointments: what to bring, what questions to
+                <span>3.</span> Making and preparing doctor’s appointments: what to bring, what questions to
                 ask, what answers to look for
               </p>
               <p>
-                4. Patient Rights: consent and HIPPA guidelines, access to health records, etc.
+                <span>4.</span> Patient Rights: consent and HIPPA guidelines, access to health records, etc.
               </p>
               <p>
-                5. Preventative health and mental health resources: regular testing for high-risk
+                <span>5.</span> Preventative health and mental health resources: regular testing for high-risk
                 illnesses, recognizing when mental health resources may be needed
               </p>                
               <p>
-                6. Digital platforms: understanding telehealth and healthcare portals, distinguishing
+                <span>6.</span> Digital platforms: understanding telehealth and healthcare portals, distinguishing
                 between common medical misconceptions
               </p>
               <p>
