--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -9,6 +9,9 @@
     </head>
 
     <body class="aboutme-page">
+        <div class="abt-background-container">
+            <img class="abt-bg-pic" src="../images/purplebg.jpg" alt="bg">
+        </div>
         <nav>
             <div class="navbar">
               <div class="nav-container">
@@ -41,8 +44,7 @@
                         Research Pathway. This experience has allowed me to reflect and summarize the
                         coursework and experiences I have had over the last four years.
                     </p>
-                </div>
-                <div class="block">
+                    <br>
                     <p>
                         As a public health major, I have significantly focused on making a difference to benefit
                         my community. I have completed 2 years of research with the Affect &amp; Cognition Lab.
@@ -53,21 +55,18 @@
                         validate a commonly used tool to collect behavioral ratings of affect by the Affect &amp;
                         Cognition Lab.
                     </p>
-                </div>
-                <div class="block">
+                    <br>
                     <p>
                         This eportfolio will take you through my college journey where I showcase how my
                         education at the university has guided me to be an active member in my community and
                         its affects on my Research experience. I plan to continue my education by studying and
                         practicing medicine, where research will continue to be a supplement in my education.
                     </p>
-                </div>    
-                <div class="block">
+                    <br>
                     <p>
                     Thank you for taking the time to visit my eportfolio site!
                     </p>
                 </div>
-                
             </div> 
         </main>
                  
