--- a/pages/key-insight-1.html
+++ b/pages/key-insight-1.html
@@ -31,27 +31,114 @@
         <main>
             <div class="main-content fade-in">
                 <h1>The Parallels of Social Sciences and Natural Sciences: Gathering Experience and Understanding Ethical Guidelines</h1>
-                <p>As I came to the University of South Carolina, I was unsure of what career I wanted to pursue. I always enjoyed science, 
-                    math, and social studies classes, subjects I could immerse myself in with hands-on activities, calculate answers, and 
-                    learn about the world around me. I was comfortable with learning theories and solving problems, a tool that aided my journey 
-                    in research. As a senior, I have pursued the <strong>Research Pathway of the Graduate with Leadership Distinction</strong>, 
-                    where I showcase how research has followed me through the last 4 years. </p>
-                <p>Before I began my senior thesis, an Honors College requirement, I had to become an expert at applying the concepts I learned by 
-                    conducting countless literature reviews, hypothesizing a solution for a problem, and implementing a solution. I decided to 
-                    pursue my major in Public Health, for which I was required to take a series of three Health Promotion, Education, and Behavior 
-                    (HPEB) classes. In spring of 2023, I enrolled in HPEB 470 Principles of Global Health (my second HPEB class), where I learned 
-                    about the driving ethical concepts in research, clinic, public health, and global health settings. In clinical settings, healthcare 
-                    teams must practice autonomy (a patient’s right to ultimate authority over decisions about their healthcare), beneficence 
-                    (the physician’s responsibility “to do good”), non-maleficence (“to do no harm”), and justice (treating all patients equitably). 
-                    In all three HPEB classes, I collaborated with a group to complete an educational and promotional presentation targeted to a high-risk 
-                    population group to address a public health problem. In HPEB 470, I created an infographic presentation educating the public about 
-                    HIV/AIDS in South Africa. Through the process, I further learned about the stigma towards this public health issue and the importance 
-                    of privacy when an individual is diagnosed. The guiding principles I have stated are important for physicians to follow so a patient 
-                    feels safe. Through discussions in class, I learned that even among classmates, trust is required to have open conversations that combine 
-                    statistics and beliefs, especially when talking about controversial topics, stigmatized issues, and items that are personal for myself and peers. </p>
-                
+                <div class="section-one">
+                    <p>As I came to the University of South Carolina, I was unsure of what career I wanted to pursue. I always enjoyed science, 
+                        math, and social studies classes, subjects I could immerse myself in with hands-on activities, calculate answers, and 
+                        learn about the world around me. I was comfortable with learning theories and solving problems, a tool that aided my journey 
+                        in research. As a senior, I have pursued the <strong class="bold">Research Pathway of the Graduate with Leadership Distinction</strong>, 
+                        where I showcase how research has followed me through the last 4 years. 
+                    </p>
+                    <p>Before I began my senior thesis, an Honors College requirement, I had to become an expert at applying the concepts I learned by 
+                        conducting countless literature reviews, hypothesizing a solution for a problem, and implementing a solution. I decided to 
+                        pursue my major in Public Health, for which I was required to take a series of three Health Promotion, Education, and Behavior 
+                        (HPEB) classes. In spring of 2023, I enrolled in <strong class="bold">HPEB 470 Principles of Global Health</strong> (my second HPEB class), where I learned 
+                        about the driving <a href="../artifacts/Artifact0.5Ethics in Global Health.docx.pdf" target="_blank" rel="noopener noreferrer"><strong class="bold">ethical concepts 
+                        in research, clinic, public health, and global health settings</strong></a>. In clinical settings, healthcare teams must practice autonomy (a patient’s right to 
+                        ultimate authority over decisions about their healthcare), <strong class="bold">beneficence</strong> (the physician’s responsibility “to do good”), 
+                        <strong class="bold">non-maleficence </strong>(“to do no harm”), and <strong class="bold">justice</strong> (treating all patients equitably). 
+                        In all three HPEB classes, I collaborated with a group to complete an educational and promotional presentation targeted to a high-risk 
+                        population group to address a public health problem. In HPEB 470, I created an <a href="../artifacts/Artifact1_HIV_AIDSinSouthAfrica.pdf" target="_blank" 
+                        rel="noopener noreferrer"><strong class="bold">infographic presentation</strong></a> educating the public about HIV/AIDS in South Africa. Through the process, 
+                        I further learned about the stigma towards this public health issue and the importance of privacy when an individual is diagnosed. The guiding principles I have 
+                        stated are important for physicians to follow so a patient feels safe. Through discussions in class, I learned that even among classmates, trust is required to 
+                        have open conversations that combine statistics and beliefs, especially when talking about controversial topics, stigmatized issues, and items that are personal for myself and peers. 
+                    </p>
+                    <p>During the summer and fall of 2024, I had the opportunity to complete an <strong class="bold">internship with Language Services at Prisma Health</strong> 
+                        in my hometown, Greenville, SC and continue during the fall semester in Columbia, SC. Over the course of 7 months, I shadowed Spanish medical interpreters 
+                        in obstetrics clinics to improve my beginner Spanish knowledge in medical terminology. I took Spanish language classes for 7 years over the course of my primary
+                        education, but did not continue to practice the language in college. Therefore, I shadowed the interpreter as they followed a primary Spanish-speaking patient and throughout 
+                        their interactions with medical assistants, physicians, and other members of the healthcare team. Every interpreter and I dealt with patients coming in for 
+                        frequent follow-ups for women who neared their pregnancy’s due date, women who wanted to/are pregnant to make sure they are keeping themselves healthy, and 
+                        for check-ups regarding their overall physical and mental wellbeing as it related to their reproductive health. Just one day in, I witnessed a problem I 
+                        had no idea was so common and prevalent. During my first day, I interacted with six patients, all of whom were asked “Do you feel safe at home?” for which 3 
+                        answered “no.” 
+                    </p>
+                    <p>I grew up in a safe environment with loving parents, extended family, and neighbors I could trust, and, to my knowledge, so did most of my friends. So, when I 
+                        witnessed that half of the patients I interacted with reported cases of domestic violence and unsafe living, I was shocked. Intimate Partner Violence (IPV) has 
+                        a higher incidence among Hispanic couples (14%) in comparison to non-Hispanic White couples (6%) (Cummings, 2013). While working and conversing with the interpreters 
+                        and professionals who report cases of unsafe living, I learned that a major cause was due to a language and cultural barrier. Hispanic communities are very family 
+                        oriented and close, so there is fear and stigma associated with reporting a ‘respected’ family member for domestic violence. Further, due to a language barrier, 
+                        especially among Hispanic women who are homemakers while their husbands speak English, there is fear and considerations an individual must make before reporting 
+                        someone they are dependent on. 
+                    </p>
+                    <p>As I dealt with various women, it was most important to listen and follow proper guidelines to keep the patient safe. We followed the ethical guidelines, autonomy, 
+                        beneficence, non-maleficence, and justice, to ensure trust was created among the patient. I learned that offering support and making sure to be clear that everyone 
+                        at a clinic is working in the best interest of the patient was the best course to take. Once reporting and educating the patient on their options moving forward, I 
+                        saw how autonomy is ever-present and the ultimate decision, regardless of what any member of the healthcare team advised. Often, patients decided they would move 
+                        forward by doing nothing. They were happy to learn what their options are, have the resources (emergency phone lines, locations of shelters, etc), and go back home 
+                        while they decided what their actions would be moving forward. 
+                    </p>
+                    <p>After a few months, I began to understand why an individual, a victim, would refuse any action to be taken against their partner. Though I wanted to help more and do 
+                        more, I realized that the role of a healthcare team is to empower the patient with the knowledge and support them regardless so they can make their own decisions. 
+                        This experience helped my witness and analyze the application of ethical principles in real-world, high-stakes settings. I understood how vital it is to approach 
+                        every single patient encounter like it is the first: without judgement, offering support, and following all ethical guidelines. I learned that, specifically with 
+                        underrepresented communities with a higher prevalence of trauma, discrimination, and neglect, trust has to be earned. 
+                    </p>
+                    <p>In addition to my social science classes, I also took <strong class="bold">natural science</strong> classes, a core requirement for the pre-med track. I enrolled in 
+                        <strong class="bold">PHYS201: Physics 1</strong>, where I learned the theory and application of Optics. My physics professor, Dr. Milind Kunchur, was a great asset 
+                        in understanding physics in a way I will remember 5 years from now. He pushed us to learn the theories behind each formula, definition, and law of physics; he even 
+                        made it 50% of his quizzes and exams. As we dove into the topic of Optics, I was taught the basics of the anatomy of the eye and how a magnifying glass works. In our 
+                        <a href="../artifacts/Artifact5_PhysicsOpticsNotes.png" target="_blank" rel="noopener noreferrer"><strong class="bold">notes</strong></a>, we drew how a virtual image 
+                        is created by a magnifying glass to see an image that is smaller or farther away. We were even taught about the near point in our eyes, which is the closest point we 
+                        can bring an object to our eyes before it is blurry due to the lenses in our eye’s inability to converge an image if it is too close. I struggled with this topic, 
+                        especially the drawings, but quickly grasped the different points at which images are created. 
+                    </p>
+                    <p>In May of 2024, I <strong class="bold">shadowed multiple physicians</strong> over the course of a month along different specialties (you can find my <a href="../artifacts/Artifacts6.1-6.4.pdf" 
+                        target="_blank" rel="noopener noreferrer"><strong class="bold">schedule here</strong></a> to see the hours and different specialties!). There, I shadowed an ophthalmologist, Dr. Ahn, who performed 
+                        multiple surgeries during the day I was with him. I had some knowledge of optics, thanks to physics, and he roughly explained how the surgery he performed worked, especially in the realm of physics. 
+                        He even guided me to <a href="../artifacts/Artifact7_diagram.png" target="_blank" rel="noopener noreferrer"><strong class="bold">draw a figure</strong></a> to understand the 
+                        procedure, an optics figure that was so similar to my notes. As I bonded with Dr. Ahn, I told him I was interested in becoming a physician, but was unsure how ethics played a role in a 
+                        surgical room, especially when I was overly accustomed to understanding and abiding to the patient’s ultimate decision, autonomy. But how did that play a role when the patient is unconscious? 
+                        As I followed him throughout his workday, I learned that beneficence and non-maleficence are critically at play, just as much as autonomy is. The surgeon, nurses, technologists, and everyone 
+                        in the room was actively making sure everything went smoothly and in the best way for the patient. If there was an avoidable issue, it was avoided. The team would talk, make sure everyone 
+                        understood their responsibilities, and came up with a game plan before every surgery. Dr. Ahn even explained how he would spend hours a week practicing and reviewing surgeries, aiding in his 
+                        confidence to always make the right decision. 
+                    </p>
+                    <p>During these two shadowing opportunities, I realized how both social science and natural science courses aided my understanding of the process in which ethics is followed in clinical and surgical 
+                        settings. I understood how the patient and medical team works in melody to make sure the best course of action is taken for the patient. Applying my education of physics and health promotion, 
+                        education, and behavior, I understood that it is important for physicians, interpreters, and all members of a healthcare team to be experts in their job so they can equip the patient with the 
+                        knowledge and resources they need to consent to a plan they are content with. 
+                    </p>
+                    <p>During my second year of college, I declared the pre-med track, and to be equipped with a more holistic education, joined the Affect & Cognition Lab. As one of my first duties, I completed CITI 
+                        Training (education and training on research ethics) and began running physiology and behavior research experiments. Applying my experiences and what I learned, I always found myself making an
+                        emphasis on the consent form all participants sign before beginning an experiment. Looking back, I realize it was to make sure all participants not only understood the terms and conditions of 
+                        their participation, but to create trust and ensure they felt comfortable with what they were signing up for. 
+                    </p>
+                    <div class="references">
+                        <h3>References</h3>
+                        <p>Cummings AM, Gonzalez-Guarda RM, Sandoval MF. Intimate Partner Violence Among Hispanics: A Review of the Literature. J Fam Violence. 2013 Feb 1;28(2):153-171. doi: 10.1007/s10896-012-9478-5. PMID: 23606787; PMCID: PMC3627727.</p>
+                        <p><a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC3627727/ ">https://pmc.ncbi.nlm.nih.gov/articles/PMC3627727/ </a></p>
+                    </div>
+                </div>
+                <div class="section-two">
+                    <h3>Artifacts</h3>
+                    <div class="artifact-one">
+                        <p>Artifact 1</p>
+                        <p>This artifact shows my score on my Language Assessment on medical terminology and medical conversational knowledge in Spanish. I scored a 68% before my internship and an 84% at the end, improving my score by 16% </p>
+                        <img src="../artifacts/Artifact4_LanguageAssessmentScore.png" alt="artifact 1">
+                    </div>
+                    <div class="artifact-two">
+                        <p>Artifact 2</p>
+                        <p>This is a final project from my HPEB 300 class where I, along with my group, created an intervention to "Cut our the Fats!" to help decrease risk for heart attacks. </p>
+                        <iframe id="iframe" src="../artifacts/Artifact2Heart Attack FInal Presentation-needs assessment.pptx.pdf" width="100%" height="600px"></iframe>
+                    </div>
+                    <div class="artifact-three">
+                        <p>Artifact 3</p>
+                        <p>This is my Community Health final report for HPEB 553 where I researched factors of E-Cigarette use among youths.</p>
+                        <iframe src="../artifacts/artifact3_CommunityHealthAnalysis.pdf" width="100%" height="600px"></iframe>
+                    </div>
+                </div>
             </div> 
-        </main>
-                 
+        </main>            
     </body>
 </html>
