--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                       
                     </div>
                     <div class='creator'>
-                        <p><ins>Website in collaboration with</ins> Peyton Fisher <ins>and</ins> Jenna Stover</p>
+                        <p><ins>Website created in collaboration with</ins> Peyton Fisher <ins>and</ins> Jenna Stover</p>
                     </div> 
             </div> 
         </main>
