--- a/pages/key-insight-1.html
+++ b/pages/key-insight-1.html
@@ -42,13 +42,13 @@
                         conducting countless literature reviews, hypothesizing a solution for a problem, and implementing a solution. I decided to 
                         pursue my major in Public Health, for which I was required to take a series of three Health Promotion, Education, and Behavior 
                         (HPEB) classes. In spring of 2023, I enrolled in <strong class="bold">HPEB 470 Principles of Global Health</strong> (my second HPEB class), where I learned 
-                        about the driving <a href="../artifacts/Artifact0.5Ethics in Global Health.docx.pdf" target="_blank" rel="noopener noreferrer"><strong class="bold">ethical concepts 
+                        about the driving <a href="../artifacts/Artifact0.5Ethics in Global Health.docx.pdf" target="_blank" rel="noopener noreferrer"><strong>ethical concepts 
                         in research, clinic, public health, and global health settings</strong></a>. In clinical settings, healthcare teams must practice autonomy (a patient’s right to 
                         ultimate authority over decisions about their healthcare), <strong class="bold">beneficence</strong> (the physician’s responsibility “to do good”), 
                         <strong class="bold">non-maleficence </strong>(“to do no harm”), and <strong class="bold">justice</strong> (treating all patients equitably). 
                         In all three HPEB classes, I collaborated with a group to complete an educational and promotional presentation targeted to a high-risk 
                         population group to address a public health problem. In HPEB 470, I created an <a href="../artifacts/Artifact1_HIV_AIDSinSouthAfrica.pdf" target="_blank" 
-                        rel="noopener noreferrer"><strong class="bold">infographic presentation</strong></a> educating the public about HIV/AIDS in South Africa. Through the process, 
+                        rel="noopener noreferrer"><strong>infographic presentation</strong></a> educating the public about HIV/AIDS in South Africa. Through the process, 
                         I further learned about the stigma towards this public health issue and the importance of privacy when an individual is diagnosed. The guiding principles I have 
                         stated are important for physicians to follow so a patient feels safe. Through discussions in class, I learned that even among classmates, trust is required to 
                         have open conversations that combine statistics and beliefs, especially when talking about controversial topics, stigmatized issues, and items that are personal for myself and peers. 
@@ -88,15 +88,15 @@
                         <strong class="bold">PHYS201: Physics 1</strong>, where I learned the theory and application of Optics. My physics professor, Dr. Milind Kunchur, was a great asset 
                         in understanding physics in a way I will remember 5 years from now. He pushed us to learn the theories behind each formula, definition, and law of physics; he even 
                         made it 50% of his quizzes and exams. As we dove into the topic of Optics, I was taught the basics of the anatomy of the eye and how a magnifying glass works. In our 
-                        <a href="../artifacts/Artifact5_PhysicsOpticsNotes.png" target="_blank" rel="noopener noreferrer"><strong class="bold">notes</strong></a>, we drew how a virtual image 
+                        <a href="../artifacts/Artifact5_PhysicsOpticsNotes.png" target="_blank" rel="noopener noreferrer"><strong>notes</strong></a>, we drew how a virtual image 
                         is created by a magnifying glass to see an image that is smaller or farther away. We were even taught about the near point in our eyes, which is the closest point we 
                         can bring an object to our eyes before it is blurry due to the lenses in our eye’s inability to converge an image if it is too close. I struggled with this topic, 
                         especially the drawings, but quickly grasped the different points at which images are created. 
                     </p>
                     <p>In May of 2024, I <strong class="bold">shadowed multiple physicians</strong> over the course of a month along different specialties (you can find my <a href="../artifacts/Artifacts6.1-6.4.pdf" 
-                        target="_blank" rel="noopener noreferrer"><strong class="bold">schedule here</strong></a> to see the hours and different specialties!). There, I shadowed an ophthalmologist, Dr. Ahn, who performed 
+                        target="_blank" rel="noopener noreferrer"><strong>schedule here</strong></a> to see the hours and different specialties!). There, I shadowed an ophthalmologist, Dr. Ahn, who performed 
                         multiple surgeries during the day I was with him. I had some knowledge of optics, thanks to physics, and he roughly explained how the surgery he performed worked, especially in the realm of physics. 
-                        He even guided me to <a href="../artifacts/Artifact7_diagram.png" target="_blank" rel="noopener noreferrer"><strong class="bold">draw a figure</strong></a> to understand the 
+                        He even guided me to <a href="../artifacts/Artifact7_diagram.png" target="_blank" rel="noopener noreferrer"><strong>draw a figure</strong></a> to understand the 
                         procedure, an optics figure that was so similar to my notes. As I bonded with Dr. Ahn, I told him I was interested in becoming a physician, but was unsure how ethics played a role in a 
                         surgical room, especially when I was overly accustomed to understanding and abiding to the patient’s ultimate decision, autonomy. But how did that play a role when the patient is unconscious? 
                         As I followed him throughout his workday, I learned that beneficence and non-maleficence are critically at play, just as much as autonomy is. The surgeon, nurses, technologists, and everyone 
@@ -121,21 +121,27 @@
                     </div>
                 </div>
                 <div class="section-two">
-                    <h3>Artifacts</h3>
+                    <h2>Artifacts</h2>
                     <div class="artifact-one">
-                        <p>Artifact 1</p>
+                        <h3>Artifact 1</h3>
                         <p>This artifact shows my score on my Language Assessment on medical terminology and medical conversational knowledge in Spanish. I scored a 68% before my internship and an 84% at the end, improving my score by 16% </p>
-                        <img src="../artifacts/Artifact4_LanguageAssessmentScore.png" alt="artifact 1">
+                        <div class="image-container">
+                            <img src="../artifacts/Artifact4_LanguageAssessmentScore.png" alt="artifact 1">
+                        </div>
                     </div>
                     <div class="artifact-two">
-                        <p>Artifact 2</p>
+                        <h3>Artifact 2</h3>
                         <p>This is a final project from my HPEB 300 class where I, along with my group, created an intervention to "Cut our the Fats!" to help decrease risk for heart attacks. </p>
-                        <iframe id="iframe" src="../artifacts/Artifact2Heart Attack FInal Presentation-needs assessment.pptx.pdf" width="100%" height="600px"></iframe>
+                        <div class="iframe">
+                            <iframe src="../artifacts/Artifact2Heart Attack FInal Presentation-needs assessment.pptx.pdf" width="75%" height="450px"></iframe>
+                        </div>
                     </div>
                     <div class="artifact-three">
-                        <p>Artifact 3</p>
+                        <h3>Artifact 3</h3>
                         <p>This is my Community Health final report for HPEB 553 where I researched factors of E-Cigarette use among youths.</p>
-                        <iframe src="../artifacts/artifact3_CommunityHealthAnalysis.pdf" width="100%" height="600px"></iframe>
+                        <div class="iframe">
+                            <iframe src="../artifacts/artifact3_CommunityHealthAnalysis.pdf" width="75%" height="600px"></iframe>
+                        </div>
                     </div>
                 </div>
             </div> 
