--- a/pages/key-insight-2.html
+++ b/pages/key-insight-2.html
@@ -40,14 +40,16 @@
                     <p>Further, I mentioned this was my favorite task. This is because I was able to see the visual representation of a person’s internal state through the measurable physiological activity. As I reflect on my experience, I understand that you cannot completely analyze an individual’s feelings and response by analyzing their facial expressions and body language. However, with research/medical instruments, we can measure and conclude larger issues through their responses to stimuli. During my experience, seeing how instruments can allow for a tangible, visual representation helped me understand the accuracy and put trust in these tools. In my future endeavors, I will have a solid foundation in the understanding of bodily processes to build on through details and more complex interactions. </p>
                 </div>
                 <div class="section-two">
-                    <h3>Artifacts</h3>
+                    <h2>Artifacts</h2>
                     <div class="artifact-one">
-                        <p>Artifact 1</p>
+                        <h3>Artifact 1</h3>
                         <p>This artifact is my first Lecture Assignment for Anatomy and Physiology 1. These Lecture assignments were completed by answering 4 long answer questions about concepts we learned in class, to prepare us for an upcoming exam. I quickly learned these assignments helped me to study and learn all major topics needed for the exam before completing the Lecture assignment, and that I could therefore focus on components I did not completely grasp and had difficulty answering on the assignment. </p>
-                        <iframe id="iframe" src="../artifacts/Artifact1_AnatomyLectureAssignment1.pdf" width="100%" height="600px"></iframe>
+                        <div class="iframe">
+                            <iframe src="../artifacts/Artifact1_AnatomyLectureAssignment1.pdf" width="75%" height="600px"></iframe>
+                        </div>
                     </div>
                     <div class="artifact-two">
-                        <p>Artifacts 2 & 3</p>
+                        <h3>Artifacts 2 & 3</h3>
                         <p>These artifacts show what I saw on my researcher computer screen while the participant completed the experiment. The top blue graph represents the GSR and the pink graph represents skin temperature. These should have a calm, oscillating graph correlating with the participant’s breathing. As they take a deep breath, the graph will rise, and as they breathe out, the values with lower. The two green lines are representation of the EMGs, measuring the action potentials of the corrugator muscle (EMG A), located above the eyebrow, and the zygomatic muscle (EMG B), located under the cheekbone. When a participant was asked to raise or furrow their eyebrows, large spikes were present. Similarly, activity should be present as a participant smiles, frowns, or any expression that affects that muscle. Lastly, the middle red graph illustrates electrocardiogram activity. The PQRST wave is present. </p>
                         <div class="image-container">
                             <img src="../artifacts/artifact-physioresponse1.jpg" alt="image 1">
