made home page changes

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                         <p class='description'>Public Health</p>
                         <p class='description'>Business Administration</p>
                         <p class='description'>Pre-med</p>
-                        <p class='description-two'>Columbia, SC</p>
+                        <p class='description-two'>University of South Carolina</p>
                         <hr id="hr-2"/>
-                        <p class='description-three'>As a public health major, I have significantly focused on making a difference to benefit my community.</p>
+                        <p class='description-three'>While completing the Research Pathway of the Graduation with Leadership Distinction, I have reflected on how my major, minor, research experience, and pre-professional track has shaped the last 4 years and prepared me for what lies ahead</p>
                       </div>
                       
                     </div>
